# crypto-alertabot-tui

./: Cargo.toml  README.md
src/: bot.rs  console.rs  error.rs  input.rs  main.rs  save.rs  tui.rs
