[package]
name = "crypto-alertabot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coingecko = "1.0.1"
serde = "1.0.147"
serde_json = "1.0.87"
crossterm = "0.25.0"
tui = "0.19.0"
futures = "0.3.25"
tokio = "1.21.2"